# golden-raspberry-api

./: README.md  pyproject.toml
app/: conftest.py  csv_reader.py  database.py  main.py  models.py  routes.py  schemas.py  services.py
app/tests/: test_api.py
