[tool.poetry]
name = "app"
version = "0.1.0"
description = "API RESTful para consultar intervalos de prêmios do Golden Raspberry Awards"
authors = ["Israel Silva <israel.bernardes.silva@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlmodel = "^0.0.24"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
